# signallab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_airline.py  run_shift.py
signallab/: __init__.py  calibration.py  cli.py  conformal.py  data.py  features.py  metrics.py  pipeline.py  reporting.py  validation.py
signallab/models/: __init__.py  base.py  baselines.py  ml.py  statistical.py
tests/: test_calibration.py  test_conformal.py  test_metrics.py  test_models.py  test_pipeline.py  test_validation.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/data/: airline.json  airline_records.json  shift.json  shift_records.json
web/components/: BenchmarkTable.tsx  CoverageChart.tsx  ForecastChart.tsx  HorizonChart.tsx  Navbar.tsx  ReliabilityChart.tsx  Reveal.tsx
web/lib/: format.ts  types.ts
