[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signallab"
version = "0.1.0"
description = "Time-series forecasting and simulation pipeline with walk-forward validation, calibration tracking, and distribution-shift robustness analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Caleb Newton" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
signallab = "signallab.cli:app"

[tool.setuptools.packages.find]
include = ["signallab*"]
